# RemoteControl

./: .gitignore  CMakeLists.txt  README.md  RemoteDeviceControl.cpp  RemoteDeviceControl.h  RemoteDeviceControl.ui  main.cpp  package.json  requirements.txt  server.py
RemoteControlPacked/: Package.appxmanifest  RemoteControlPacked.assets.cache  RemoteControlPacked.wapproj
core/: AppController.cpp  AppController.h  AppState.h  ControlEventHandler.cpp  ControlEventHandler.h  RoomManager.cpp  RoomManager.h  ScreenCapturer.cpp  ScreenCapturer.h
input/: InputInjector.cpp  InputInjector.h
mediasoup/: MediasoupClient.cpp  MediasoupClient.h  VideoDecoder.cpp  VideoDecoder.h  VideoProducer.cpp  VideoProducer.h
mediasoup-prebuilt/lib/: absl_bad_optional_access.lib  absl_bad_variant_access.lib  absl_base.lib  absl_demangle_internal.lib  absl_dynamic_annotations.lib  absl_failure_signal_handler.lib  absl_hash.lib  absl_int128.lib  absl_internal_bad_any_cast_impl.lib  absl_internal_city.lib  absl_internal_civil_time.lib  absl_internal_debugging_internal.lib  absl_internal_examine_stack.lib  absl_internal_graphcycles_internal.lib  absl_internal_hashtablez_force_sampling.lib  absl_internal_hashtablez_sampler.lib  absl_internal_malloc_internal.lib  absl_internal_spinlock_wait.lib  absl_internal_str_format_internal.lib  absl_internal_strings_internal.lib  absl_internal_throw_delegate.lib  absl_internal_time_zone.lib  absl_leak_check.lib  absl_leak_check_disable.lib  absl_optional.lib  absl_raw_hash_set.lib  absl_stacktrace.lib  absl_strings.lib  absl_symbolize.lib  absl_synchronization.lib  absl_time.lib  libssl-1_1-x64.lib  netstring.lib  srtp2.lib  usrsctp.lib  uv.exp  uv.lib  uv_a.lib  wingetopt.lib
network/: SignalingClient.cpp  SignalingClient.h
ui/: AppShell.cpp  AppShell.h  ConnectModal.cpp  ConnectModal.h  HostPage.cpp  HostPage.h  KickPeerModal.cpp  KickPeerModal.h  PeerListWidget.cpp  PeerListWidget.h  SettingsModal.cpp  SettingsModal.h  ViewerPage.cpp  ViewerPage.h
